--- a/mathkraft/pubspec.yaml
+++ b/mathkraft/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  sqflite: ^2.4.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +64,7 @@ flutter:
     - lib/assets/MathKraft.png
     - lib/assets/Personagem1.png
     - lib/assets/Personagem2.png
+    - lib/database/mathkraft_db.dart
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
